# ergon.studio

./: .env.e2e-tests  .gitignore  CHANNEL_RUNTIME_REWRITE_PLAN.md  DESIGN.md  LICENSE  PROJECT_PLAN.md  README.md  SPRITES.md  ergon-studio  opencode.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
.ergon.studio/: COMPLETION.md  HANDOFF.md
.github/workflows/: publish.yml
agents/: architect.md  coder.md  critic.md  design_reviewer.md  orchestrator.md  quality_controller.md  researcher.md  reviewer.md  scout.md  tester.md
ergon_studio/: __init__.py  agent_factory.py  agent_session_store.py  app_config.py  approval_store.py  artifact_store.py  bootstrap.py  cli.py  command_store.py  config.py  context_providers.py  conversation_store.py  debug_log.py  definitions.py  evals.py  event_store.py  file_ops.py  live_runtime.py  main.py  memory_store.py  paths.py  project.py  provider_health.py  proxy_cli.py  proxy_runtime.py  registry.py  response_stream.py  retrieval.py  runtime.py  runtime_events.py  seed.py  server_control.py  session_store.py  task_store.py  tool_call_logging.py  tool_call_store.py  tool_context.py  tool_registry.py  upstream.py  whiteboard_store.py  (+8 more)
ergon_studio/proxy/: __init__.py  agent_runner.py  channel_executor.py  channel_staffing.py  channels.py  chat_adapter.py  chat_bridge.py  config_tui.py  continuation.py  core.py  delivery_requirements.py  discussion_workroom_executor.py  group_chat_workflow_executor.py  group_chat_workroom_executor.py  grouped_workflow_executor.py  grouped_workroom_executor.py  handoff_workflow_executor.py  handoff_workroom_executor.py  health.py  magentic_workflow_executor.py  magentic_workroom_executor.py  models.py  orchestrator_tools.py  parse_utils.py  pending_store.py  planner.py  playbook_focus.py  playbook_staffing.py  prompts.py  response_sink.py  responses_adapter.py  responses_bridge.py  selection_outcome.py  server.py  session_overlay.py  staged_workroom_executor.py  subsession_executor.py  tool_call_emitter.py  tool_passthrough.py  tool_policy.py  (+17 more)
ergon_studio/storage/: __init__.py  models.py  sqlite.py
ergon_studio/tui/: __init__.py  app.py  config_wizard.py  inspectors.py  timeline_builder.py  timeline_models.py  timeline_widgets.py  widgets.py
prompts/: openmemory.service  steward.md  steward.service
scripts/: check  check-real-e2e  format  run-steward.sh
skills/handoff/: SKILL.md
src/: cli.ts  index.ts  memory.ts  steward.ts
tests/: e2e.test.js  memory.test.mjs  plugin.test.js  plugin.test.mjs  real_proxy_e2e.py  real_test_support.py  steward.test.mjs  test_agent_factory.py  test_agent_runner.py  test_agent_session_store.py  test_agentic_loops.py  test_app_config.py  test_approval_store.py  test_artifact_store.py  test_bootstrap.py  test_channel_executor.py  test_channels.py  test_cli.py  test_cli_imports.py  test_command_store.py  test_config.py  test_config_tui.py  test_context_providers.py  test_conversation_store.py  test_debug_log.py  test_definitions.py  test_discussion_workroom_executor.py  test_evals.py  test_event_store.py  test_group_chat_workflow_executor.py  test_group_chat_workroom_executor.py  test_grouped_workflow_executor.py  test_grouped_workroom_executor.py  test_handoff_workflow_executor.py  test_handoff_workroom_executor.py  test_live_runtime.py  test_magentic_workflow_executor.py  test_magentic_workroom_executor.py  test_memory_store.py  test_paths.py  (+60 more)
(+28 files in other folders)
