[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ergon-studio"
version = "0.1.0"
description = "OpenAI-compatible orchestration proxy for local coding models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "agent-framework-core",
  "PyYAML",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
]

[project.scripts]
ergon-studio = "ergon_studio.proxy_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
