[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "ergon_studio/default_definitions/**/*.md",
]

[project]
name = "ergon-studio"
version = "0.1.0"
description = "OpenAI-compatible orchestration proxy for local coding models."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
  { name = "Aristeidis Stathopoulos", email = "aristath@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]

dependencies = [
  "aiohttp",
  "openai",
  "PyYAML",
]

[project.urls]
Repository = "https://github.com/aristath/ergon.studio"
Issues = "https://github.com/aristath/ergon.studio/issues"

[project.optional-dependencies]
tui = [
  "textual",
]
dev = [
  "aiohttp",
  "mypy",
  "pytest",
  "pytest-cov",
  "ruff",
  "textual",
  "types-PyYAML",
]

[project.scripts]
ergon = "ergon_studio.proxy_cli:main"
ergon-studio = "ergon_studio.proxy_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
  "B",
  "E",
  "F",
  "I",
  "UP",
]

[tool.mypy]
python_version = "3.12"
files = ["ergon_studio"]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
